--- a/css/styles.css
+++ b/css/styles.css
@@ -10959,3 +10959,201 @@ section#contact form#contactForm :-ms-input-placeholder {
     visibility: visible;
 }
 
+.wrapper{
+    margin-top: -100px;
+}
+.art {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+    margin: 0;
+}
+
+.face {
+    width: 250px;
+    height: 350px;
+    position: relative;
+    margin-left: auto;
+}
+@media (max-width: 992px) {
+    .art{
+        order: -1;
+        margin-bottom: 2rem;
+    }
+    .face{
+        width: 220px;
+        height: 280px;
+        margin: 0 auto;
+    }
+    .head, .hair, .eye, .brow{
+        transform: scale(0.8);
+        transform-origin: top left;
+    }
+}
+
+.head {
+    position: absolute;
+    width: 180px;
+    height: 220px;
+    background-color: #f5cf9c;
+    border-radius: 50%;
+    top: 120px;
+    left: 60px;
+    z-index: 2;
+}
+
+.hair {
+    position: absolute;
+    width: 220px;
+    height: 300px;
+    background-color: #0c0b0a;
+    border-radius: 50% 50% 0 0;
+    top: 80px;
+    left: 40px;
+    z-index: 1;
+}
+
+.ear {
+    position: absolute;
+    width: 30px;
+    height: 50px;
+    background-color: #f5cf9c;
+    border-radius: 10px;
+    top: 90px;
+    z-index: 3;
+}
+
+.ear.left {
+    left: -10px;
+
+}
+
+.ear.right {
+    right: -10px;
+}
+
+.brow {
+    display: flex;
+    position: absolute;
+    width: 55px;
+    height: 20px;
+    border-top: 7px solid #5b380b;
+    border-radius: 100%;
+    top: 50px;
+    z-index: 5;
+}
+
+.brow.right {
+    right: 16px;
+}
+
+.brow.left {
+    left: 20px;
+}
+
+.eyes {
+    display: flex;
+    justify-content: space-evenly;
+    position: absolute;
+    top: 70px;
+    right: 125px;
+    width: 90px;
+    z-index: 4;
+}
+
+.eye {
+    width: 40px;
+    height: 30px;
+    background-color: #fffbf6;
+    border-radius: 50%;
+    position: relative;
+}
+
+.iris {
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    background-color: #5b380b;
+    border-radius: 50%;
+    top: 15px;
+    left: 20px;
+    transform: translate(-50%, -50%);
+}
+
+.iris::after {
+    content: "";
+    position: absolute;
+    width: 8px;
+    height: 8px;
+    background: #000;
+    border-radius: 50%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.eye::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #f5cf9c;
+    top: -80%;
+    left: 0;
+    border-radius: 30%;
+    z-index: 3;
+}
+
+.eye,
+left {
+    left: 60px;
+}
+
+.eye.right {
+    left: 110px;
+}
+
+.nose {
+    position: absolute;
+    border: 2px solid #cf903d;
+    width: 20px;
+    height: 30px;
+    border-radius: 0 0 100% 100%;
+    border-top: none;
+    top: 110px;
+    left: 80px;
+}
+
+.mouth {
+    position: absolute;
+    width: 80px;
+    height: 20px;
+    background-color: #6d1710;
+    border-radius: 0 0 45px 45px;
+    top: 160px;
+    left: 55px;
+
+}
+
+.hand {
+    width: 60px;
+    height: 100px;
+    background-color: #f5cf9c;
+    border-radius: 50px;
+    top: 220px; left: -160px;
+    position: relative;
+    transform-origin: top center;
+    animation: wave 1s infinite;
+}
+
+@keyframes wave {
+    0%,
+    100% {
+        transform: rotate(90deg);
+    }
+
+    50% {
+        transform: rotate(180deg);
+    }
+}
